--- a/.github/workflows/dockerhub.yml
+++ b/.github/workflows/dockerhub.yml
@@ -22,7 +22,7 @@ concurrency:
 
 env:
   DOCKER_IMAGE: docker.io/cryptic-stack/ocatl-neko
-  DOCKERHUB_USERNAME: ${{ vars.DOCKERHUB_USERNAME || github.actor }}
+  DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME || vars.DOCKERHUB_USERNAME || github.actor }}
 
 jobs:
   build-base:
