--- a/runtime/Dockerfile.nvidia
+++ b/runtime/Dockerfile.nvidia
@@ -13,8 +13,8 @@ ARG GSTREAMER_VERSION
 # install dependencies
 ENV DEBIAN_FRONTEND=noninteractive
 RUN set -eux; \
-    apt-get update; \
-    apt-get install -y --no-install-recommends \
+    apt-get -o Acquire::Retries=5 update; \
+    apt-get -o Acquire::Retries=5 install -y --no-install-recommends \
         # Install essentials
         curl build-essential ca-certificates git \
         # Install pip and ninja
@@ -80,8 +80,8 @@ ARG USER_GID=$USER_UID
 ENV DEBIAN_FRONTEND=noninteractive
 RUN set -eux; \
     dpkg --add-architecture i386; \
-    apt-get update; \
-    apt-get install -y --no-install-recommends \
+    apt-get -o Acquire::Retries=5 update; \
+    apt-get -o Acquire::Retries=5 install -y --no-install-recommends \
         # opengl base: https://gitlab.com/nvidia/container-images/opengl/-/blob/ubuntu20.04/base/Dockerfile
         libxau6 libxau6:i386 \
         libxdmcp6 libxdmcp6:i386 \
@@ -103,9 +103,9 @@ RUN set -eux; \
     #
     # install vulkan-utils or vulkan-tools depending on ubuntu release
     if [ "${UBUNTU_RELEASE}" = "18.04" ]; then \
-        apt-get install -y --no-install-recommends vulkan-utils; \
+        apt-get -o Acquire::Retries=5 install -y --no-install-recommends vulkan-utils; \
     else \
-        apt-get install -y --no-install-recommends vulkan-tools; \
+        apt-get -o Acquire::Retries=5 install -y --no-install-recommends vulkan-tools; \
     fi; \
     #
     # create symlink for libnvrtc.so (needed for cudaconvert)
@@ -123,8 +123,8 @@ ENV LD_LIBRARY_PATH="/usr/lib/x86_64-linux-gnu:/usr/lib/i386-linux-gnu${LD_LIBRA
 # install dependencies
 ENV DEBIAN_FRONTEND=noninteractive
 RUN set -eux; \
-    apt-get update; \
-    apt-get install -y --no-install-recommends \
+    apt-get -o Acquire::Retries=5 update; \
+    apt-get -o Acquire::Retries=5 install -y --no-install-recommends \
         wget ca-certificates supervisor \
         pulseaudio dbus-x11 xserver-xorg-video-dummy \
         libcairo2 libxcb1 libxrandr2 libxv1 libopus0 libvpx6 libx264-155 libvo-aacenc0 librtmp1 \
@@ -138,8 +138,8 @@ RUN set -eux; \
     #
     # install libxcvt0 (not available in debian:bullseye)
     ARCH=$(dpkg --print-architecture); \
-    wget http://ftp.de.debian.org/debian/pool/main/libx/libxcvt/libxcvt0_0.1.2-1_${ARCH}.deb; \
-    apt-get install --no-install-recommends ./libxcvt0_0.1.2-1_${ARCH}.deb; \
+    wget --tries=5 --waitretry=2 --retry-connrefused http://deb.debian.org/debian/pool/main/libx/libxcvt/libxcvt0_0.1.2-1_${ARCH}.deb; \
+    apt-get -o Acquire::Retries=5 install --no-install-recommends ./libxcvt0_0.1.2-1_${ARCH}.deb; \
     rm ./libxcvt0_0.1.2-1_${ARCH}.deb; \
     #
     # create a non-root user
@@ -164,7 +164,7 @@ RUN set -eux; \
     chown -R $USERNAME:$USERNAME /home/$USERNAME; \
     #
     # install fonts
-    apt-get install -y --no-install-recommends \
+    apt-get -o Acquire::Retries=5 install -y --no-install-recommends \
         # Emojis
         fonts-noto-color-emoji \
         # Chinese fonts
@@ -206,8 +206,8 @@ RUN VULKAN_API_VERSION=$(dpkg -s libvulkan1 | grep -oP 'Version: [0-9|\.]+' | gr
 
 #
 # install an up-to-date version of VirtualGL
-RUN apt-get update; \
-    apt-get install -y --no-install-recommends wget gpg ca-certificates; \
+RUN apt-get -o Acquire::Retries=5 update; \
+    apt-get -o Acquire::Retries=5 install -y --no-install-recommends wget gpg ca-certificates; \
     # Add VirtualGL GPG key
     wget -q -O- https://packagecloud.io/dcommander/virtualgl/gpgkey | \
     gpg --dearmor >/etc/apt/trusted.gpg.d/VirtualGL.gpg; \
@@ -215,8 +215,8 @@ RUN apt-get update; \
     wget -q -O /etc/apt/sources.list.d/VirtualGL.list \
         https://raw.githubusercontent.com/VirtualGL/repo/main/VirtualGL.list; \
     # Install packages
-    apt-get update; \
-    apt-get install -y --no-install-recommends virtualgl=${VIRTUALGL_VERSION}; \
+    apt-get -o Acquire::Retries=5 update; \
+    apt-get -o Acquire::Retries=5 install -y --no-install-recommends virtualgl=${VIRTUALGL_VERSION}; \
     #
     # clean up
     apt-get clean -y; \
@@ -268,3 +268,4 @@ HEALTHCHECK --interval=10s --timeout=5s --retries=8 \
 #
 # run neko
 CMD ["/usr/bin/supervisord", "-c", "/etc/neko/supervisord.conf"]
+
