--- a/apps/xfce-netbird/supervisord.conf
+++ b/apps/xfce-netbird/supervisord.conf
@@ -1,3 +1,13 @@
+[program:netbird]
+command=/usr/bin/netbird service run
+autorestart=true
+priority=250
+user=root
+stdout_logfile=/var/log/neko/netbird.log
+stdout_logfile_maxbytes=100MB
+stdout_logfile_backups=10
+redirect_stderr=true
+
 [program:xfce]
 environment=HOME="/home/%(ENV_USER)s",USER="%(ENV_USER)s",DISPLAY="%(ENV_DISPLAY)s"
 command=/usr/bin/startxfce4
